Closed
Bug 474187
Opened 16 years ago
Closed 16 years ago
Qt port broken in widget follow up to bug448830 split nsIntRect
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.2a1
People
(Reporter: wuno, Assigned: wuno)
References
Details
Attachments
(1 file)
20.92 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.2a1pre) Gecko/20090114 Minefield/3.2a1pre
Build Identifier:
nsWidgetFactory.cpp: In function 'nsresult nsWindowConstructor(nsISupports*, con
st nsIID&, void**)':
nsWidgetFactory.cpp:81: error: cannot allocate an object of abstract type 'nsWin
dow'
nsWindow.h:109: note: because the following virtual functions are pure within
'nsWindow':
../../../dist/include/widget/nsIWidget.h:323: note: virtual nsresult nsIWidget::Create(nsIWidget*, const nsIntRect&, nsEventStatus (*)(nsGUIEvent*), nsIDeviceContext*, nsIAppShell*, nsIToolkit*, nsWidgetInitData*)
../../../dist/include/widget/nsIWidget.h:350: note: virtual nsresult nsIWidget::Create(void*, const nsIntRect&, nsEventStatus (*)(nsGUIEvent*), nsIDeviceContext*, nsIAppShell*, nsIToolkit*, nsWidgetInitData*)
[snip]
several files in widget/src/qt have to be updated to pick up the changes, patch to come
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Assignee | ||
Comment 1•16 years ago
|
||
Note this patch exchanges in NativeThemeQt.{h.cpp} only nsMargin and nsSize against nsIntMargin and nsIntSize, respectively, while nsRect remains unchanged due to the inclusion of gfx/public/nsITheme.h
In nsWindow{h,cpp} all occurrences of nsRect and nsPoint are exchanged against nsIntRect and nsIntPoint, respectively.
Tested the patch by building with --enable-default-toolkit=cairo-qt
Attachment #357535 -
Flags: review?(roc) → review+
Assignee | ||
Updated•16 years ago
|
Keywords: checkin-needed
Version: unspecified → Trunk
Comment 3•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
You need to log in
before you can comment on or make changes to this bug.
Description
•