Bug 474187 - Qt port broken in widget follow up to bug448830 split nsIntRect. r=roc