widget/src/qt/nsWindow.h
@@ -121,14 +121,14 @@ public:
     //
 
     NS_IMETHOD         Create(nsIWidget        *aParent,
-                              const nsRect     &aRect,
+                              const nsIntRect     &aRect,
                               EVENT_CALLBACK   aHandleEventFunction,
                               nsIDeviceContext *aContext,
                               nsIAppShell      *aAppShell,
                               nsIToolkit       *aToolkit,
                               nsWidgetInitData *aInitData);
     NS_IMETHOD         Create(nsNativeWidget aParent,
-                              const nsRect     &aRect,
+                              const nsIntRect     &aRect,
                               EVENT_CALLBACK   aHandleEventFunction,
                               nsIDeviceContext *aContext,
                               nsIAppShell      *aAppShell,
@@ -160,7 +160,7 @@ public:
     NS_IMETHOD         SetSizeMode(PRInt32 aMode);
     NS_IMETHOD         Enable(PRBool aState);
     NS_IMETHOD         SetFocus(PRBool aRaise = PR_FALSE);
-    NS_IMETHOD         GetScreenBounds(nsRect &aRect);
+    NS_IMETHOD         GetScreenBounds(nsIntRect &aRect);
     NS_IMETHOD         SetForegroundColor(const nscolor &aColor);
     NS_IMETHOD         SetBackgroundColor(const nscolor &aColor);
     NS_IMETHOD         SetCursor(nsCursor aCursor);
@@ -172,7 +172,7 @@ public:
     NS_IMETHOD         MakeFullScreen(PRBool aFullScreen);
     NS_IMETHOD         Validate();
     NS_IMETHOD         Invalidate(PRBool aIsSynchronous);
-    NS_IMETHOD         Invalidate(const nsRect &aRect,
+    NS_IMETHOD         Invalidate(const nsIntRect &aRect,
                                   PRBool        aIsSynchronous);
     NS_IMETHOD         InvalidateRegion(const nsIRegion *aRegion,
                                         PRBool           aIsSynchronous);
@@ -180,10 +180,10 @@ public:
     NS_IMETHOD         SetColorMap(nsColorMap *aColorMap);
     NS_IMETHOD         Scroll(PRInt32  aDx,
                               PRInt32  aDy,
-                              nsRect  *aClipRect);
+                              nsIntRect  *aClipRect);
     NS_IMETHOD         ScrollWidgets(PRInt32 aDx,
                                      PRInt32 aDy);
-    NS_IMETHOD         ScrollRect(nsRect  &aSrcRect,
+    NS_IMETHOD         ScrollRect(nsIntRect  &aSrcRect,
                                   PRInt32  aDx,
                                   PRInt32  aDy);
 
@@ -196,10 +196,10 @@ public:
     NS_IMETHOD         SetIcon(const nsAString& aIconSpec);
     NS_IMETHOD         SetMenuBar(void * aMenuBar) { return NS_ERROR_FAILURE; }
     NS_IMETHOD         ShowMenuBar(PRBool aShow);
-    NS_IMETHOD         WidgetToScreen(const nsRect& aOldRect,
-                                      nsRect& aNewRect);
-    NS_IMETHOD         ScreenToWidget(const nsRect& aOldRect,
-                                      nsRect& aNewRect);
+    NS_IMETHOD         WidgetToScreen(const nsIntRect& aOldRect,
+                                      nsIntRect& aNewRect);
+    NS_IMETHOD         ScreenToWidget(const nsIntRect& aOldRect,
+                                      nsIntRect& aNewRect);
     NS_IMETHOD         BeginResizingChildren(void);
     NS_IMETHOD         EndResizingChildren(void);
     NS_IMETHOD         GetPreferredSize (PRInt32 &aWidth,
@@ -237,7 +237,7 @@ public:
     void DispatchLostFocusEvent(void);
     void DispatchActivateEvent(void);
     void DispatchDeactivateEvent(void);
-    void DispatchResizeEvent(nsRect &aRect, nsEventStatus &aStatus);
+    void DispatchResizeEvent(nsIntRect &aRect, nsEventStatus &aStatus);
 
     nsEventStatus DispatchEvent(nsGUIEvent *aEvent) {
         nsEventStatus status;
@@ -313,7 +313,7 @@ protected:
 
     nsresult           NativeCreate(nsIWidget        *aParent,
                                     nsNativeWidget    aNativeParent,
-                                    const nsRect     &aRect,
+                                    const nsIntRect     &aRect,
                                     EVENT_CALLBACK    aHandleEventFunction,
                                     nsIDeviceContext *aContext,
                                     nsIAppShell      *aAppShell,
